2012-06-13 Michel Trottier-McDonald <mtm@cern.ch>
	* Adding MMC kinematics, Resonance Pt and MET for both lephad processors
	* Adding lists of samples for 2012 lephad skimming

2012-06-11 Michel Trottier-McDonald <mtm@cern.ch>
	* Added sample groups for skimming in datasets.cfg
	* Adding numJets30 and numJets35 to eLHProcessor, as well as btagging variables for jets

2012-05-15 Michel Trottier-McDonald <mtm@cern.ch>
	* Adapted datasets.py to electron channel

2012-05-13 Michel Trottier-McDonald <mtm@cern.ch>
	* higgstautau/lephad/external out of the repository
	* Added a script to export the external tools

2012-05-11 Michel Trottier-McDonald <mtm@cern.ch>
	* Ported changes to bitbucket repository
	* Adapted LHSkim.py to HSG4 lephad common skimming
	* Added external directory for lephad correction tools
	* Implemented important correction tools for muhad channel
	* Added a few variables to models and muLHProcessor.py

2012-04-22 Michel Trottier-McDonald <mtm@cern.ch>
	* Corrected muon and electron pt threshold at selection
	* Cleaned up the lephad/filters.py a bit

2012-04-20 Michel Trottier-McDonald <mtm@cern.ch>
	* Extensively modified LHSkim.py to meet lephad requirements
	* Added AllTriggers condition, which is just a big OR of all needed triggers

2012-04-18 Michel Trottier-McDonald <mtm@cern.ch>
	* Renamed muLHSkim to LHSkim
	* Slightly changed run restrictions in trigger requirements to
	capture all MC runs
	* Added no trigger requirement for 2012 runs
	* Added *_skimselection as placeholders for the object requirement
	done in skimming
	* Added back the L1_* and L2_* trigger bits as well

2012-04-17 Michel Trottier-McDonald <mtm@cern.ch>
	* Cleaned up the lephad section of datasets.cfg, adapted to ehad +
	muhad
	* Adapted muLHSkim.py
	* Corrected run error in the mu data trigger filter

2012-04-12 Michel Trottier-McDonald <mtm@cern.ch>
	* Implemented the run_mc_lh.py and run_data_lh.py scripts
	* Added back the EF_* block and the trig_* block in the skims
