@@ -1,12 +1,12 @@
 group10.perf-tau.data12_8TeV.00203605.physics_JetTauEtmiss.f446_m1148.01-08-14.D3PD_EXT0/
-group10.perf-tau.data12_8TeV.00203719.physics_Egamma.f446_m1148.01-08-14.D3PD_EXT0/
+
 group10.perf-tau.data12_8TeV.00203719.physics_JetTauEtmiss.f446_m1148.01-08-14.D3PD_EXT0/
-group10.perf-tau.data12_8TeV.00203719.physics_Muons.f446_m1148.01-08-14.D3PD_EXT0/
-group10.perf-tau.data12_8TeV.00203876.physics_Egamma.f447_m1153.01-08-14.D3PD_EXT0/
+
+
 group10.perf-tau.data12_8TeV.00203876.physics_JetTauEtmiss.f447_m1153.01-08-14.D3PD_EXT0/
-group10.perf-tau.data12_8TeV.00203876.physics_Muons.f447_m1153.01-08-14.D3PD_EXT0/
-group10.perf-tau.data12_8TeV.00203934.physics_Egamma.f447_m1153.01-08-14.D3PD_EXT0/
+
+
 group10.perf-tau.data12_8TeV.00203934.physics_JetTauEtmiss.f447_m1153.01-08-14.D3PD_EXT0/
-group10.perf-tau.data12_8TeV.00203934.physics_Muons.f447_m1153.01-08-14.D3PD_EXT0/
+
 group10.perf-tau.data12_8TeV.00204026.physics_JetTauEtmiss.f447_m1153.01-08-14.D3PD_EXT0/
-group10.perf-tau.data12_8TeV.00204026.physics_Muons.f447_m1153.01-08-14.D3PD_EXT0/
+
