@@ -31,14 +31,14 @@ mc11_7TeV.125358.PythiaWH135_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r304
 mc11_7TeV.125359.PythiaWH140_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
 mc11_7TeV.125360.PythiaWH145_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
 mc11_7TeV.125361.PythiaWH150_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
-mc11_7TeV.125511.PythiaZH100_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125512.PythiaZH105_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125513.PythiaZH110_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125514.PythiaZH115_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125515.PythiaZH120_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125516.PythiaZH125_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125517.PythiaZH130_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125518.PythiaZH135_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125519.PythiaZH140_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125520.PythiaZH145_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
-mc11_7TeV.125521.PythiaZH150_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p8511/
+mc11_7TeV.125511.PythiaZH100_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125512.PythiaZH105_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125513.PythiaZH110_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125514.PythiaZH115_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125515.PythiaZH120_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125516.PythiaZH125_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125517.PythiaZH130_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125518.PythiaZH135_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125519.PythiaZH140_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125520.PythiaZH145_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
+mc11_7TeV.125521.PythiaZH150_tautaulh.merge.NTUP_TAUMEDIUM.e825_s1310_s1300_r3043_r2993_p851/
