@@ -19,3 +19,35 @@ group10.perf-tau.mc12_8TeV.161692.Pythia8_AU2CTEQ6L1_ZH100_tautauhh.e1217_s1469_
 group10.perf-tau.mc12_8TeV.161693.Pythia8_AU2CTEQ6L1_ZH105_tautauhh.e1217_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
 group10.perf-tau.mc12_8TeV.161697.Pythia8_AU2CTEQ6L1_ZH125_tautauhh.e1217_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
 group10.perf-tau.mc12_8TeV.161702.Pythia8_AU2CTEQ6L1_ZH150_tautauhh.e1217_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105200.McAtNloJimmy_CT10_ttbar_LeptonFilter.e1193_s1469_s1470_r3542_r3549_tid782699_00.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105921.McAtNloJimmy_AUET2CT10_WpWmenuenu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105922.McAtNloJimmy_AUET2CT10_WpWmenumunu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105923.McAtNloJimmy_AUET2CT10_WpWmenutaunu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105924.McAtNloJimmy_AUET2CT10_WpWmmunuenu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105925.McAtNloJimmy_AUET2CT10_WpWmmunumunu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105926.McAtNloJimmy_AUET2CT10_WpWmmunutaunu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105927.McAtNloJimmy_AUET2CT10_WpWmtaunuenu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105928.McAtNloJimmy_AUET2CT10_WpWmtaunumunu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.105929.McAtNloJimmy_AUET2CT10_WpWmtaunutaunu.e1223_s1469_s1470_r3573_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.108343.McAtNloJimmy_CT10NLOME_AUET2CTEQ6L1MPI_SingleTopSChanWenu.e1195_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/  
+group.perf-tau.mc12_8TeV.108344.McAtNloJimmy_CT10NLOME_AUET2CTEQ6L1MPI_SingleTopSChanWmunu.e1195_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.108345.McAtNloJimmy_CT10NLOME_AUET2CTEQ6L1MPI_SingleTopSChanWtaunu.e1195_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/  
+group.perf-tau.mc12_8TeV.108346.McAtNloJimmy_CT10NLOME_AUET2CTEQ6L1MPI_SingleTopWtChanIncl.e1195_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/	 
+group.perf-tau.mc12_8TeV.117360.AcerMCPythia_AUET2BCTEQ6L1_singletop_tchan_e.e1195_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.117361.AcerMCPythia_AUET2BCTEQ6L1_singletop_tchan_mu.e1195_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.117362.AcerMCPythia_AUET2BCTEQ6L1_singletop_tchan_tau.e1195_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126937.PowhegPythia8_AU2CT10_ZZ_4e_mll4_2pt5.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126938.PowhegPythia8_AU2CT10_ZZ_2e2mu_mll4_2pt5.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126939.PowhegPythia8_AU2CT10_ZZ_2e2tau_mll4_2pt5.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126940.PowhegPythia8_AU2CT10_ZZ_4mu_mll4_2pt5.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126941.PowhegPythia8_AU2CT10_ZZ_2mu2tau_mll4_2pt5.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126942.PowhegPythia8_AU2CT10_ZZ_4tau_mll4_2pt5.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126950.PowhegPythia8_AU2CT10_ZZllnunu_mm_mll4.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.126951.PowhegPythia8_AU2CT10_ZZllnunu_tt_mll4.e1280_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.147800.PowhegPythia8_AU2CT10_Wplusenu.e1169_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.147801.PowhegPythia8_AU2CT10_Wplusmunu.e1169_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.147803.PowhegPythia8_AU2CT10_Wminenu.e1169_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.147804.PowhegPythia8_AU2CT10_Wminmunu.e1169_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.147806.PowhegPythia8_AU2CT10_Zee.e1169_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.147807.PowhegPythia8_AU2CT10_Zmumu.e1169_s1469_s1470_r3542_r3549.01-08-14.D3PD_EXT0/
+group.perf-tau.mc12_8TeV.147812.Pythia8_AU2CTEQ6L1_Wtaunu.e1176_s1479_s1470_r3553_r3549.01-08-14.D3PD_EXT0/
