@@ -9,6 +9,6 @@ tmpDir = /tmp
 nFilesPerJob = 1
 athenaTag = AtlasProduction,17.2.0.2
 cmtConfig = x86_64-slc5-gcc43-opt
-excludedSite = ANALY_AUSTRALIA,ANALY_AGLT2,ANALY_SLAC,ANALY_SWT2_CPB,ANALY_PIC,ANALY_QMUL
+excludedSite = ANALY_AGLT2,ANALY_AUSTRALIA,ANALY_LRZ
 useContElementBoundary = True
 maxCpuCount = 172800
